fix documentation for R CMD CHECK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,14 @@ export(boxcox)
 export(lambert)
 export(orderNorm)
 export(yeojohnson)
+importFrom(stats,approx)
+importFrom(stats,density)
+importFrom(stats,fitted)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,optimize)
+importFrom(stats,predict)
+importFrom(stats,predict.lm)
+importFrom(stats,qnorm)
+importFrom(stats,sd)
+importFrom(stats,var)
