--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,5 +27,6 @@ importFrom(stats,optimize)
 importFrom(stats,predict)
 importFrom(stats,predict.lm)
 importFrom(stats,qnorm)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,var)
