--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 0.1.0.9003
+Version: 0.1.1.9003
 Date: 2017-11-01
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
@@ -20,7 +20,7 @@ Suggests:
     knitr,
     MASS,
     testthat,
-    visreg
+    mgcv
 VignetteBuilder: knitr 
 LazyData: true
 RoxygenNote: 6.0.1
