--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 0.2.2
-Date: 2017-11-13
+Version: 0.2.2.9000
+Date: 2017-11-14
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
                   role = c("aut", "cre"))
 Description: Estimate a suite of normalizing transformations, including 
     a new technique based on ranks which can guarantee normally distributed 
-    transformed data if there are no ties: Ordered Quantile Normalization. 
+    transformed data if there are no ties: ordered quantile normalization. 
     The package is built to estimate the best normalizing transformation for
     a vector consistently and accurately. It implements the Box-Cox 
     transformation, the Yeo-Johnson transformation, three types of Lambert
