--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(parallel,clusterExport)
+importFrom(parallel,parLapplyLB)
 importFrom(stats,approx)
 importFrom(stats,density)
 importFrom(stats,fitted)
