--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 0.2.2.9002
-Date: 2017-12-18
+Version: 1.0.0
+Date: 2018-01-04
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
                   role = c("aut", "cre"))
@@ -12,7 +12,7 @@ Description: Estimate a suite of normalizing transformations, including
     The package is built to estimate the best normalizing transformation for
     a vector consistently and accurately. It implements the Box-Cox 
     transformation, the Yeo-Johnson transformation, three types of Lambert
-    WxF transformations, and the Ordered Quantile normalization 
+    WxF transformations, and the ordered quantile normalization 
     transformation.
 URL: https://github.com/petersonR/bestNormalize
 License: GPL-3
