--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,21 @@ Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
 Version: 1.0.0.9000
-Date: 2018-01-04
+Date: 2018-01-25
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
                   role = c("aut", "cre"))
 Description: Estimate a suite of normalizing transformations, including 
-    a new technique based on ranks which can guarantee normally distributed 
-    transformed data if there are no ties: ordered quantile normalization. 
-    The package is built to estimate the best normalizing transformation for
-    a vector consistently and accurately. It implements the Box-Cox 
-    transformation, the Yeo-Johnson transformation, three types of Lambert
-    WxF transformations, and the ordered quantile normalization 
+    a new adaptation of a technique based on ranks which can guarantee 
+    normally distributed transformed data if there are no ties: ordered 
+    quantile normalization (ORQ). ORQ normalization combines Van Der 
+    Waerden's approach with a shifted logistic approximation that allows
+    the transformation to work on data outside the original domain. It is 
+    also able to handle new data within the original domain via linear 
+    interpolation. The package is built to estimate the best normalizing 
+    transformation for a vector consistently and accurately. It implements 
+    the Box-Cox transformation, the Yeo-Johnson transformation, three types 
+    of Lambert WxF transformations, and the ordered quantile normalization 
     transformation.
 URL: https://github.com/petersonR/bestNormalize
 License: GPL-3
