--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Authors@R: person("Ryan Andrew", "Peterson",
 Description: Estimate a suite of normalizing transformations, including 
     a new adaptation of a technique based on ranks which can guarantee 
     normally distributed transformed data if there are no ties: ordered 
-    quantile normalization (ORQ). ORQ normalization combines Van Der 
-    Waerden's approach with a shifted logistic approximation that allows
+    quantile normalization (ORQ). ORQ normalization combines a rank-mapping
+    approach with a shifted logit approximation that allows
     the transformation to work on data outside the original domain. It is 
     also able to handle new data within the original domain via linear 
     interpolation. The package is built to estimate the best normalizing 
