--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(parallel,clusterCall)
 importFrom(parallel,clusterExport)
 importFrom(parallel,parLapplyLB)
 importFrom(stats,approx)
