--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,13 +23,13 @@ License: GPL-3
 Depends: R (>= 3.1.0)
 Imports: 
     LambertW,
-    nortest,
-    parallel
+    nortest
 Suggests: 
     knitr,
     MASS,
     testthat,
-    mgcv
+    mgcv,
+    parallel
 VignetteBuilder: knitr 
 LazyData: true
 RoxygenNote: 6.0.1
