--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 1.2.0
-Date: 2018-05-30
+Version: 1.2.0.9000
+Date: 2018-05-31
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
                   role = c("aut", "cre"))
@@ -17,7 +17,8 @@ Description: Estimate a suite of normalizing transformations, including
     transformation for a vector consistently and accurately. It implements 
     the Box-Cox transformation, the Yeo-Johnson transformation, three types 
     of Lambert WxF transformations, and the ordered quantile normalization 
-    transformation.
+    transformation. It also estimates the normalization efficacy of other
+    commonly used transformations. 
 URL: https://github.com/petersonR/bestNormalize
 License: GPL-3
 Depends: R (>= 3.1.0)
