--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(predict,boxcox)
 S3method(predict,exp_x)
 S3method(predict,lambert)
 S3method(predict,log_x)
+S3method(predict,no_transform)
 S3method(predict,orderNorm)
 S3method(predict,sqrt_x)
 S3method(predict,yeojohnson)
@@ -22,6 +23,7 @@ S3method(print,boxcox)
 S3method(print,exp_x)
 S3method(print,lambert)
 S3method(print,log_x)
+S3method(print,no_transform)
 S3method(print,orderNorm)
 S3method(print,sqrt_x)
 S3method(print,yeojohnson)
@@ -32,6 +34,7 @@ export(boxcox)
 export(exp_x)
 export(lambert)
 export(log_x)
+export(no_transform)
 export(orderNorm)
 export(sqrt_x)
 export(yeojohnson)
