--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 1.2.0.9001
-Date: 2018-09-07
+Version: 1.2.0.9002
+Date: 2018-09-20
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan-peterson@uiowa.edu", 
                   role = c("aut", "cre"))
@@ -21,10 +21,14 @@ Description: Estimate a suite of normalizing transformations, including
     commonly used transformations. 
 URL: https://github.com/petersonR/bestNormalize
 License: GPL-3
-Depends: R (>= 3.1.0)
+Depends: 
+    R (>= 3.1.0),
+    doSNOW,
+    doRNG
 Imports: 
     LambertW,
-    nortest
+    nortest,
+    dplyr
 Suggests: 
     knitr,
     rmarkdown,
