--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,10 @@ export(no_transform)
 export(orderNorm)
 export(sqrt_x)
 export(yeojohnson)
+importFrom(doRNG,"%dorng%")
+importFrom(doSNOW,registerDoSNOW)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
