--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,8 @@ export(no_transform)
 export(orderNorm)
 export(sqrt_x)
 export(yeojohnson)
+importFrom(doParallel,registerDoParallel)
 importFrom(doRNG,"%dorng%")
-importFrom(doSNOW,registerDoSNOW)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graphics,legend)
