--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 1.4.1
-Date: 2019-05-13
+Version: 1.4.2
+Date: 2019-08-20
 Authors@R: person("Ryan Andrew", "Peterson", 
-                  email = "ryan-peterson@uiowa.edu", 
+                  email = "ryan.a.peterson@cuanschutz.edu", 
                   role = c("aut", "cre"))
 Description: Estimate a suite of normalizing transformations, including 
     a new adaptation of a technique based on ranks which can guarantee 
