Add step_* recipes functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     dplyr,
     doParallel,
     foreach,
-    doRNG 
+    doRNG,
+    recipes
 Suggests: 
     knitr,
     rmarkdown,
@@ -39,5 +40,5 @@ Suggests:
     parallel
 VignetteBuilder: knitr 
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Encoding: UTF-8
