--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,9 +56,18 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(recipes,add_step)
 importFrom(recipes,bake)
+importFrom(recipes,check_type)
+importFrom(recipes,ellipse_check)
+importFrom(recipes,is_trained)
 importFrom(recipes,prep)
+importFrom(recipes,printer)
+importFrom(recipes,rand_id)
 importFrom(recipes,recipe)
+importFrom(recipes,sel2char)
+importFrom(recipes,step)
+importFrom(recipes,terms_select)
 importFrom(recipes,tidy)
 importFrom(stats,approx)
 importFrom(stats,density)
@@ -74,3 +83,5 @@ importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
