--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
 Version: 1.6.1
-Date: 2020-05-21
+Date: 2020-06-08
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan.a.peterson@cuanschutz.edu", 
                   role = c("aut", "cre"))
@@ -25,7 +25,7 @@ License: GPL-3
 Depends: 
     R (>= 3.1.0)
 Imports: 
-    LambertW,
+    LambertW (>= 0.6.5),
     nortest,
     dplyr,
     doParallel,
