--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(predict,arcsinh_x)
 S3method(predict,bestNormalize)
 S3method(predict,binarize)
 S3method(predict,boxcox)
+S3method(predict,center_scale)
 S3method(predict,exp_x)
 S3method(predict,lambert)
 S3method(predict,log_x)
@@ -24,6 +25,7 @@ S3method(print,arcsinh_x)
 S3method(print,bestNormalize)
 S3method(print,binarize)
 S3method(print,boxcox)
+S3method(print,center_scale)
 S3method(print,exp_x)
 S3method(print,lambert)
 S3method(print,log_x)
@@ -39,6 +41,7 @@ export(arcsinh_x)
 export(bestNormalize)
 export(binarize)
 export(boxcox)
+export(center_scale)
 export(exp_x)
 export(lambert)
 export(log_x)
