--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(methods,is)
+importFrom(purrr,map)
 importFrom(recipes,add_step)
 importFrom(recipes,bake)
 importFrom(recipes,check_type)
