--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
-Version: 1.6.1.9000
-Date: 2020-09-07
+Version: 1.7.0
+Date: 2021-03-01
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan.a.peterson@cuanschutz.edu", 
                   role = c("aut", "cre"))
@@ -17,9 +17,11 @@ Description: Estimate a suite of normalizing transformations, including
     transformation for a vector consistently and accurately. It implements 
     the Box-Cox transformation, the Yeo-Johnson transformation, three types 
     of Lambert WxF transformations, and the ordered quantile normalization 
-    transformation. It also estimates the normalization efficacy of other
-    commonly used transformations, and finally it allows users to specify 
-    custom transformations or normalization statistics.
+    transformation. It estimates the normalization efficacy of other
+    commonly used transformations, and it allows users to specify 
+    custom transformations or normalization statistics. Finally, bestNormalize
+    and ORQ normalization can be integrated into machine learning workflows 
+    via recipes. 
 URL: https://github.com/petersonR/bestNormalize
 License: GPL-3
 Depends: 
