terms_select -> recipes_eval_select

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,9 +77,9 @@ importFrom(recipes,prep)
 importFrom(recipes,printer)
 importFrom(recipes,rand_id)
 importFrom(recipes,recipe)
+importFrom(recipes,recipes_eval_select)
 importFrom(recipes,sel2char)
 importFrom(recipes,step)
-importFrom(recipes,terms_select)
 importFrom(recipes,tidy)
 importFrom(stats,approx)
 importFrom(stats,density)
