--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,7 +74,7 @@ importFrom(recipes,check_type)
 importFrom(recipes,ellipse_check)
 importFrom(recipes,is_trained)
 importFrom(recipes,prep)
-importFrom(recipes,printer)
+importFrom(recipes,print_step)
 importFrom(recipes,rand_id)
 importFrom(recipes,recipe)
 importFrom(recipes,recipes_eval_select)
