--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Package: bestNormalize
 Type: Package
 Title: Normalizing Transformation Functions
 Version: 1.8.3
-Date: 2022-06-12
+Date: 2022-06-13
 Authors@R: person("Ryan Andrew", "Peterson", 
                   email = "ryan.a.peterson@cuanschutz.edu", 
-                  role = c("aut", "cre"))
+                  role = c("aut", "cre"), 
+                  comment = c(ORCID = "0000-0002-4650-5798")))
 Description: Estimate a suite of normalizing transformations, including 
     a new adaptation of a technique based on ranks which can guarantee 
     normally distributed transformed data if there are no ties: ordered 
