Add an S3 methods that helps `step_orderNorm()` to work with parallel processing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(print,sqrt_x)
 S3method(print,step_best_normalize)
 S3method(print,step_orderNorm)
 S3method(print,yeojohnson)
+S3method(required_pkgs,step_orderNorm)
 S3method(tidy,bestNormalize)
 S3method(tidy,no_transform)
 S3method(tidy,step_best_normalize)
@@ -51,6 +52,7 @@ export(lambert)
 export(log_x)
 export(no_transform)
 export(orderNorm)
+export(required_pkgs)
 export(sqrt_x)
 export(step_bestNormalize)
 export(step_bestNormalize_new)
@@ -62,6 +64,7 @@ importFrom(doParallel,registerDoParallel)
 importFrom(doRNG,"%dorng%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(generics,required_pkgs)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
