--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(print,sqrt_x)
 S3method(print,step_best_normalize)
 S3method(print,step_orderNorm)
 S3method(print,yeojohnson)
+S3method(required_pkgs,step_best_normalize)
 S3method(required_pkgs,step_orderNorm)
 S3method(tidy,bestNormalize)
 S3method(tidy,no_transform)
