New transformation: double reverse log

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(predict,bestNormalize)
 S3method(predict,binarize)
 S3method(predict,boxcox)
 S3method(predict,center_scale)
+S3method(predict,double_reverse_log)
 S3method(predict,exp_x)
 S3method(predict,lambert)
 S3method(predict,log_x)
@@ -28,6 +29,7 @@ S3method(print,bestNormalize)
 S3method(print,binarize)
 S3method(print,boxcox)
 S3method(print,center_scale)
+S3method(print,double_reverse_log)
 S3method(print,exp_x)
 S3method(print,lambert)
 S3method(print,log_x)
@@ -48,6 +50,7 @@ export(bestNormalize)
 export(binarize)
 export(boxcox)
 export(center_scale)
+export(double_reverse_log)
 export(exp_x)
 export(lambert)
 export(log_x)
