--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(methods,is)
+importFrom(progress,progress_bar)
 importFrom(purrr,map)
 importFrom(recipes,add_step)
 importFrom(recipes,bake)
